--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  background: url("../img/patel.jpg") top right no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -1117,6 +1117,7 @@ section {
 }
 
 .contact .php-email-form input {
+  
   height: 44px;
 }
 
